deploy/phases/07-app-admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: nagar-app
  labels:
    app.kubernetes.io/name: nagar-admin-service
    app.kubernetes.io/part-of: nagarvault
    app.kubernetes.io/component: api
    nagar.io/phase: "07"
spec:
  selector:
    app.kubernetes.io/name: nagar-admin-service
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 4001
      targetPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: nagar-app
  labels:
    app.kubernetes.io/name: nagar-admin-service
    app.kubernetes.io/part-of: nagarvault
    app.kubernetes.io/component: api
    nagar.io/phase: "07"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: nagar-admin-service
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nagar-admin-service
        app.kubernetes.io/part-of: nagarvault
        app.kubernetes.io/component: api
        nagar.io/phase: "07"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: admin-service
          # Rewritten by digest-pins/ to the registry-verified pin (I-5/I-11).
          image: registry.nagar.internal:5000/nagar-admin-service:phase7f-4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          ports:
            - containerPort: 4001
              name: http
          readinessProbe:
            httpGet: { path: /dbcheck, port: 4001 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /, port: 4001 }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { cpu: 500m, memory: 256Mi }
      volumes:
        - name: tmp
          emptyDir: {}
